zerocopy-derive/tests/ui-nightly/struct.stderr
error: unsupported on generic structs that are not repr(transparent) or repr(packed)
  --> tests/ui-nightly/struct.rs:97:10
   |
97 | #[derive(IntoBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-nightly/struct.rs:122:11
    |
122 | #[repr(C, align(2))]
    |           ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-nightly/struct.rs:126:21
    |
126 | #[repr(transparent, align(2))]
    |                     ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-nightly/struct.rs:132:16
    |
132 | #[repr(packed, align(2))]
    |                ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-nightly/struct.rs:136:18
    |
136 | #[repr(align(1), align(2))]
    |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-nightly/struct.rs:140:8
    |
140 | #[repr(align(2), align(4))]
    |        ^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
   --> tests/ui-nightly/struct.rs:126:8
    |
126 | #[repr(transparent, align(2))]
    |        ^^^^^^^^^^^  ^^^^^^^^

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-nightly/struct.rs:31:10
   |
31 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `KL00`, the trait `Sized` is not implemented for `[u8]`, which is required by `KL00: Sized`
note: required because it appears within the type `KL00`
  --> tests/ui-nightly/struct.rs:32:8
   |
32 | struct KL00(u8, NotKnownLayoutDst);
   |        ^^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> tests/ui-nightly/struct.rs:36:10
   |
36 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `KL02`, the trait `Sized` is not implemented for `[u8]`, which is required by `KL02: Sized`
note: required because it appears within the type `KL02`
  --> tests/ui-nightly/struct.rs:37:8
   |
37 | struct KL02(u8, [u8]);
   |        ^^^^
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotKnownLayoutDst: KnownLayout` is not satisfied
  --> tests/ui-nightly/struct.rs:41:10
   |
41 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ the trait `KnownLayout` is not implemented for `NotKnownLayoutDst`
   |
   = help: the following other types implement trait `KnownLayout`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotKnownLayout: KnownLayout` is not satisfied
  --> tests/ui-nightly/struct.rs:47:10
   |
47 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ the trait `KnownLayout` is not implemented for `NotKnownLayout`
   |
   = help: the following other types implement trait `KnownLayout`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<()>: NoCell` is not satisfied
  --> tests/ui-nightly/struct.rs:55:10
   |
55 | #[derive(NoCell)]
   |          ^^^^^^ the trait `NoCell` is not implemented for `UnsafeCell<()>`
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `NoCell` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<u8>: NoCell` is not satisfied
  --> tests/ui-nightly/struct.rs:60:10
   |
60 | #[derive(NoCell)]
   |          ^^^^^^ the trait `NoCell` is not implemented for `UnsafeCell<u8>`, which is required by `[UnsafeCell<u8>; 0]: NoCell`
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `[UnsafeCell<u8>; 0]` to implement `NoCell`
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `NoCell` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> tests/ui-nightly/struct.rs:71:1
   |
71 | struct TryFromBytesPacked {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> tests/ui-nightly/../util.rs
   |
   | pub struct AU16(u16);
   | ^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> tests/ui-nightly/struct.rs:77:1
   |
77 | struct TryFromBytesPackedN {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> tests/ui-nightly/../util.rs
   |
   | pub struct AU16(u16);
   | ^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> tests/ui-nightly/struct.rs:83:1
   |
83 | struct TryFromBytesCPacked {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> tests/ui-nightly/../util.rs
   |
   | pub struct AU16(u16);
   | ^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> tests/ui-nightly/struct.rs:89:1
   |
89 | struct TryFromBytesCPackedN {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> tests/ui-nightly/../util.rs
   |
   | pub struct AU16(u16);
   | ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `HasPadding<IntoBytes2, true>: ShouldBe<false>` is not satisfied
   --> tests/ui-nightly/struct.rs:101:10
    |
101 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ the trait `ShouldBe<false>` is not implemented for `HasPadding<IntoBytes2, true>`
    |
    = help: the trait `ShouldBe<true>` is implemented for `HasPadding<IntoBytes2, true>`
    = help: see issue #48214
    = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `HasPadding<IntoBytes3, true>: ShouldBe<false>` is not satisfied
   --> tests/ui-nightly/struct.rs:108:10
    |
108 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ the trait `ShouldBe<false>` is not implemented for `HasPadding<IntoBytes3, true>`
    |
    = help: the trait `ShouldBe<true>` is implemented for `HasPadding<IntoBytes3, true>`
    = help: see issue #48214
    = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0587]: type has conflicting packed and align representation hints
   --> tests/ui-nightly/struct.rs:133:1
    |
133 | struct Unaligned3;
    | ^^^^^^^^^^^^^^^^^
